--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   color: rgb(255, 255, 255);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.5;
@@ -10,7 +10,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -18,10 +18,6 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-input[type="date"] {
-  background: rgb(35, 44, 40);
 }
 
 ::-webkit-calendar-picker-indicator {
